fix text align

--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -8,8 +8,8 @@ body {
     height: 100vh;
     /* Flexbox stuff */
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     text-align: left;
     color: white;
 
